Added MB indicator to memory parameters, added ref to TOMCAT_MEMORY